--- a/1차_웹프로젝트/03.구현소스/css/mainpage.css
+++ b/1차_웹프로젝트/03.구현소스/css/mainpage.css
@@ -17,9 +17,30 @@ body * {
 
 /************** 0. 인트로 영역 **************/
 /* 상단영역 인트로 박스 : 평소에는 보이지 않고, 마우스 오버 시 보임 */
-.intro-area .intro-box{
+.intro-area{
     overflow: hidden;
 }
+#infro-ticket-area {
+    position: relative;
+    height: 100vh;
+    background: url(../../01.자료수집/img/팬텀관련/팬텀이미지/티켓배경_흐리게_VER.png) no-repeat center /cover;
+}
+
+.ticket{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    max-width: 1600px;
+    aspect-ratio: 1600/730;
+
+}
+.ticket-img img{
+    width: 100%;
+    height: 100%;
+}
+
+
 
 /***************** 1. 상단영역 *****************/
 /* 상단영역 최상위 부모박스 */
