--- a/1차_웹프로젝트/03.구현소스/css/mainpage.css
+++ b/1차_웹프로젝트/03.구현소스/css/mainpage.css
@@ -143,14 +143,17 @@ body > * {
 
 /***************** 1.5. 드라마파트메뉴 *****************/
 /***************** 2. 메인영역 *****************/
-/***************** 2-1. 배너영역 *****************/
-.banner-part{
-    /* 비율셋팅 : 배너이미지크기 비율임! */
-    aspect-ratio: 1380 / 598;
-    
-    /* 임시이미지 */
-    background: url(../../01.구현디자인/결과물/배너포스터/dokaebi_banner1.jpg) no-repeat center/cover;
+#main-area{
+    background: url(../../01.자료수집/img/팬텀관련/팬텀이미지/ChatGPT\ Image\ 2025년\ 8월\ 4일\ 오전\ 11_09_33.png) no-repeat center /cover;
+    object-fit: fill
 }
+
+/***************** 2-1. 팬텀 3D 영역 *****************/
+
+/* 3d-img 박스 */
+
+
+
 /***************** 2-2. 캐릭터영역 *****************/
 .cat-part{
     height: 188px;
