--- a/1차_웹프로젝트/03.구현소스/css/mainpage.css
+++ b/1차_웹프로젝트/03.구현소스/css/mainpage.css
@@ -240,6 +240,15 @@ body > * {
     background-color: #ffffff4b;
 }
 
+.threed_model {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;          
+  /* 가운데 정렬 */
+  display: block;
+}
+
 
 /***************** 2-4. 미리보기영역 *****************/
 /* .view-part{
