--- a/1차_웹프로젝트/03.구현소스/css/mainpage.css
+++ b/1차_웹프로젝트/03.구현소스/css/mainpage.css
@@ -240,7 +240,7 @@ body > * {
     background-color: #ffffff4b;
 }
 
-.threed_model {
+.modeling {
   position: absolute;
   width: 100%;
   height: 100%;
