--- a/1차_웹프로젝트/03.구현소스/css/mainpage.css
+++ b/1차_웹프로젝트/03.구현소스/css/mainpage.css
@@ -110,8 +110,17 @@ body * {
   gap: 3.2rem;
 }
 
+.gnb-menu > ul > li {
+  position: relative;
+}
+
 /* 상위 메뉴 li오버시 a요소 글자 빨간색 */
 .gnb-menu > ul > li:hover > a {
+  color: #f00;
+}
+
+/* 하위 메뉴 li 오버시 a요소 글자 빨간색 */
+.gnb-menu .sub-menu ul li:hover a {
   color: #f00;
 }
 
@@ -130,8 +139,14 @@ body * {
 
 .gnb-menu ul article a {
   color: #000000;
-  font-family: "Alfa Slab One",'맑은 고딕', serif;
+  font-family: "Alfa Slab One",'Black Han Sans', serif;
 }
+
+.gnb-menu ul a.kr {
+  font-family: 'Black Han Sans','Noto Sans KR',sans-serif;
+  font-size: 1.6rem;
+}
+
 
 /* 서브메뉴 */
 .sub-menu {
@@ -343,7 +358,7 @@ section.b-part::after {
   translate: -50% 0;
 }
 
-.bphantom img {
+.bphantom-part img {
   width: 100%;
   height: 100%;
   /* 이미지 top 부분에서 맞춰서 보이게하기 */
