--- a/1차_웹프로젝트/03.구현소스/css/mainpage.css
+++ b/1차_웹프로젝트/03.구현소스/css/mainpage.css
@@ -23,6 +23,8 @@ body * {
 .intro-area {
   overflow: hidden;
 }
+
+/************** 0. 최상단 영역 **************/
 #intro-ticket-area {
   position: relative;
   height: 100vh;
