--- a/1차_웹프로젝트/03.구현소스/css/mainpage.css
+++ b/1차_웹프로젝트/03.구현소스/css/mainpage.css
@@ -7,6 +7,10 @@
 /* 12그리드 CSS */
 @import url(./grid_12_flex.css);
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   overflow-x: hidden;
   background-color: #000;
@@ -81,7 +85,6 @@ body {
   opacity: 0;
   pointer-events: none;
 }
-
 
 /************** 0. 최상단 영역 **************/
 #intro-ticket-area {
@@ -547,7 +550,7 @@ section.b-part::after {
     rgba(0, 0, 0, 0) 65%
   );
   /* 드랍 때만 보임 */
-  opacity: 0; 
+  opacity: 0;
   pointer-events: none;
   filter: blur(1px);
 }
@@ -582,13 +585,13 @@ section.b-part::after {
   }
   85% {
     /* 가볍게 튕김 */
-    transform: translateY(-12px) rotate(-0.6deg); 
+    transform: translateY(-12px) rotate(-0.6deg);
     opacity: 1;
   }
   100% {
     transform: translateY(0) rotate(0deg);
     /* 마지막 프레임에서 확실히 보이게 */
-    opacity: 1; 
+    opacity: 1;
   }
 }
 
@@ -721,7 +724,7 @@ section.b-part::after {
 /***************** 3. 하단영역 *****************/
 #bottom-area {
   position: relative;
-  width: 1940px;
+  max-width: 1940px;
   margin: 0 auto;
 }
 
@@ -733,9 +736,9 @@ section.b-part::after {
 }
 .footer-wrap {
   /* 요청한 고정 폭 */
-  width: 1940px;
+  width: 100%;
   /* 더 넓어지지 않게 */
-  max-width: 1940px;
+  /* max-width: 1940px; */
   /* 가운데 정렬 */
   margin: 0 auto;
   /* 위/옆/아래 여백 */
@@ -747,6 +750,7 @@ section.b-part::after {
 /* 상단: 좌측 로고 + 우측 주소 텍스트 */
 .footer-top {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
   gap: 36px;
 }
