--- a/1차_웹프로젝트/03.구현소스/css/mainpage.css
+++ b/1차_웹프로젝트/03.구현소스/css/mainpage.css
@@ -2,52 +2,22 @@
 /* EMK뮤지컬컴퍼니 PJ 메인 페이지 CSS - main.css */
 
 /* 외부 CSS 불러오기 */
+@import url(./common.css);
 @import url(./reset.css);
 @import url(./core.css);
 /* 12그리드 CSS */
 @import url(./grid_12_flex.css);
 
-body {
-  overflow-x: hidden;
-  background-color: #000;
-  cursor: none;
-}
+
 /* 공사중 표시 */
 /* body * {
   outline: 2px dashed #ccc;
 } */
 
-/* 커서 전체 */
-.custom-cursor {
-  position: fixed;
-  top: 0;
-  left: 0;
-  pointer-events: none;
-  z-index: 2147483647;
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  will-change: transform;
-  transform: translate3d(0, 0, 0);
-}
-
-.custom-cursor img {
-  user-select: none;
-  pointer-events: none;
-}
-.cursor-img {
-  width: 24px;
-  height: auto;
-}
-/* 꼬리 (EMK 이미지) */
-.cursor-tail {
-  width: 40px;
-  height: auto;
-}
 
 /***************** 메인 CSS *****************/
 
-/************** 0. 인트로 영역 **************/
+/************** 0. 동영상 영역 **************/
 /* 상단영역 인트로 박스 : 평소에는 보이지 않고, 마우스 오버 시 보임 */
 .intro-area {
   overflow: hidden;
@@ -68,7 +38,6 @@ body {
   translate: -50% 0;
 }
 
-/* 하단 내용 추가 */
 #intro-area {
   position: relative;
   height: 100vh;
@@ -83,9 +52,9 @@ body {
   opacity: 0;
   pointer-events: none;
 }
-/* 상단 내용 */
 
-/************** 0. 최상단 영역 **************/
+
+/************** 1. 티켓 예매 영역 **************/
 #intro-ticket-area {
   position: relative;
   height: 100vh;
@@ -170,156 +139,7 @@ body {
   background: #333;
 }
 
-/***************** 1. 상단영역 *****************/
-/* 상단영역 최상위 부모박스 */
-#top-area {
-  position: relative;
-  /* 상단영역이 항상위! */
-  z-index: 9999;
-}
-.top-area {
-  height: 122px;
-}
 
-/* 상단영역 플렉스 부모박스 */
-.top-area .cont-box {
-  justify-content: space-between;
-}
-/* 로고박스 */
-.logo-box {
-  width: 126px;
-  text-align: center;
-  padding: 43px 0;
-}
-
-/* 메뉴박스 */
-.menu-box {
-  padding-right: 10px;
-}
-
-/* 메뉴그룹 플렉스 */
-.menu-group {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: space-evenly;
-  height: 100%;
-}
-/* 상단영역 메뉴 공통 플렉스 */
-.menu-group ul {
-  display: flex;
-}
-/* 탑메뉴 */
-.top-menu ul {
-  font-size: 1.6rem;
-  gap: 2rem;
-}
-/* GNB메뉴 */
-.gnb-menu ul {
-  font-size: 1.8rem;
-  gap: 3.2rem;
-}
-
-.gnb-menu > ul > li {
-  position: relative;
-}
-
-/* 상위 메뉴 li오버시 a요소 글자 빨간색 */
-.gnb-menu > ul > li:hover > a {
-  color: #f00;
-}
-
-/* 하위 메뉴 li 오버시 a요소 글자 빨간색 */
-.gnb-menu .sub-menu ul li:hover a {
-  color: #f00;
-}
-
-/* .gnb-menu ul > li >article{
-    font-size: 1.1rem;
-    gap: 1.3rem;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-} */
-
-.gnb-menu ul a {
-  color: #fff;
-  font-family: "Alfa Slab One", serif;
-}
-
-.gnb-menu ul article a {
-  color: #000000;
-  font-family: "Alfa Slab One", "Black Han Sans", serif;
-}
-
-.gnb-menu ul a.kr {
-  font-family: "Black Han Sans", "Noto Sans KR", sans-serif;
-  font-size: 1.6rem;
-}
-
-/* 서브메뉴 */
-.sub-menu {
-  position: absolute;
-  /* top: 90px; */
-  left: 0;
-  /* width: 100%; */
-  box-sizing: border-box;
-  background-color: #fff;
-  border-radius: 20%;
-
-  /* 배경색은 속박스인 패딩박스에 준다! */
-  /* background-color: #fff; -> 삭제 */
-
-  /* 서브메뉴를 숨기기위해 넘치는 자식 숨기기설정 */
-  overflow: hidden;
-  /* 높이값을 0으로 하면 자식요소가 숨겨짐!
-  -> 단, 여기에 위아래 패딩을 줄 경우 숨겨지지 않는다! */
-  max-height: 0;
-  /* 처음에 최대높이값 셋팅필수! 그래야 트랜지션 먹음! */
-
-  /* 트랜지션 */
-  transition: 0.4s ease-out;
-  white-space: nowrap;
-}
-
-.sub-list-padding-box {
-  padding: 16px 29px 16px 19px;
-}
-/* 부모 li에 마우스 오버시 .sub-menu 높이값 변경하기 */
-.gnb-menu > ul > li:hover .sub-menu {
-  max-height: 400px;
-  /* 최대 높이값을 컨텐츠 높이값 보다 좀 더 크게 잡으면
-    오버시 높이값이 내용만큼만 커지게 된다! */
-}
-
-/* 패딩만 내부에 다른 블록요소를 사용함!
--> 자식요소 숨기기 부모박스엔 패딩을 줄 수 없다! */
-.padding-box {
-  padding: 5vw;
-  /* li에서 25px 떨어져서 하단 보더가 보이게 함 */
-  margin-top: 25px;
-  /* 배경색은 여기에! */
-  background-color: white;
-}
-
-/* 타이틀 바 */
-.title-bar {
-  display: flex;
-  justify-content: space-between;
-}
-
-/* 서브리스트 ul */
-.sub-list ul {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  /* height: 100px; */
-  font-size: 1.1rem;
-  gap: 1.3rem;
-  background-color: #fff;
-  color: #000;
-}
 
 /***************** 2. 메인영역 *****************/
 #main-area {
@@ -332,8 +152,7 @@ body {
 /* 배경 이미지 박스 */
 .b-part {
   position: absolute;
-  background: url(../img/팬텀관련/팬텀이미지/ChatGPT\ Image\ 2025년\ 8월\ 4일\ 오전\ 11_09_33.png)
-    no-repeat center top/130%;
+  background: url(../img/팬텀관련/팬텀이미지/ChatGPT\ Image\ 2025년\ 8월\ 4일\ 오전\ 11_09_33.png)no-repeat center top/130%;
   object-fit: fill;
   width: 1940px;
   max-width: 100%;
@@ -664,7 +483,7 @@ section.b-part::after {
   height: 100%;
   top: 0;
   left: 0;
-  background: url(/1차_웹프로젝트/01.자료수집/img/팬텀관련/팬텀이미지/문구.png)
+  background: url(../img/팬텀관련/팬텀이미지/문구.png)
     no-repeat center / cover;
 }
 
@@ -727,71 +546,4 @@ section.b-part::after {
   /* 이미지 보이는 영역이 위쪽에서부터 보이도록 */
   object-position: top;
 }
-/***************** 3. 하단영역 *****************/
-#bottom-area {
-  position: relative;
-  width: 1940px;
-  margin: 0 auto;
-}
 
-/* 바탕 빨간 천 배경 */
-.footer {
-  background: url("../img/팬텀관련/images/images/하단영역_04.png")
-    center/cover no-repeat;
-  color: #fff;
-}
-.footer-wrap {
-  /* 요청한 고정 폭 */
-  width: 1940px;
-  /* 더 넓어지지 않게 */
-  max-width: 1940px;
-  /* 가운데 정렬 */
-  margin: 0 auto;
-  /* 위/옆/아래 여백 */
-  padding: 48px 56px 72px;
-  box-sizing: border-box;
-  min-height: 360px;
-}
-
-/* 상단: 좌측 로고 + 우측 주소 텍스트 */
-.footer-top {
-  display: flex;
-  align-items: flex-start;
-  gap: 36px;
-}
-.footer__logo img {
-  height: 86px;
-}
-.corp-info {
-  font-size: 16px;
-  font-weight: 800;
-  line-height: 1.35;
-  letter-spacing: 0.2px;
-  min-width: 1250px;
-}
-
-/* 중간 정책 라인 */
-.policy-line {
-  margin: 24px 0 40px;
-  font-size: 16px;
-  font-weight: 800;
-}
-
-/* 우측 하단 SNS 아이콘 – 절대 배치로 정확히 고정 */
-.sns-list {
-  position: absolute;
-  right: 72px;
-  bottom: 56px;
-  display: flex;
-  gap: 28px;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.sns-list li img {
-  display: block;
-  /* 원형 아이콘 크기 */
-  width: 108px;
-  height: 108px;
-  box-sizing: border-box;
-}
