--- a/1차_웹프로젝트/03.구현소스/css/p-relationship.css
+++ b/1차_웹프로젝트/03.구현소스/css/p-relationship.css
@@ -54,7 +54,6 @@
 서브 메인 페이지
 ***************/
 
-
 /* 배경이미지 */
 #main-area {
   background: url(../img/팬텀관련/팬텀이미지/screening_bg.jpg);
@@ -76,19 +75,17 @@
   width: 30vw;
 }
 
-
+/* 버튼 공통 스타일 */
 /* 버튼 공통 스타일 */
 .reserve-btn-wrapper {
-  position: absolute;
+  position: relative;
   top: 1.8%;
-  left: 50%;
-  transform: translateX(-50%);
   display: flex;
-  /* 버튼간격 */
   gap: 20px;
   border-radius: 6px;
+  justify-content: center;
+  margin-top: 100px;
 }
-
 .btn-reserve {
   /* 아이콘 + 텍스트 정렬 */
   display: inline-block;
@@ -100,11 +97,16 @@
   text-decoration: none;
   transition: 0.3s ease;
 }
+@media (max-width: 768px) {
+  .btn-reserve {
+    font-size: 0;
+    padding: 5px 8px;
+  }
+}
 
 .btn-reserve:hover {
   background-color: #b30000;
 }
-
 
 /* 아이콘 크기 */
 #main-area.reserve-btn-wrapper img {
@@ -113,13 +115,13 @@
   height: auto;
 }
 
-
-
 /* 히스토리 버튼 */
 .history-btn-box {
-  position: relative;
-  top: 30vh;
-  gap: 30%;
+  position: sticky;
+  top: 0;
+  margin-top: 30vh;
+  padding: 24px 0;
+  background-color: #0000007a;
   z-index: 99999;
 }
 .history-btn-box ul {
@@ -134,6 +136,7 @@
 }
 
 .poster-box {
+  margin-top: -30vh;
   text-align: center;
 }
 .poster-box img {
