--- a/1차_웹프로젝트/03.구현소스/css/common.css
+++ b/1차_웹프로젝트/03.구현소스/css/common.css
@@ -117,7 +117,6 @@ body {
   background: #333;
 }
 
-
 /***************** 2. 상단영역 *****************/
 /* 상단영역 최상위 부모박스 */
 #top-area {
@@ -125,6 +124,7 @@ body {
   /* 상단영역이 항상위! */
   z-index: 9999;
 }
+
 .top-area {
   height: 122px;
 }
@@ -140,20 +140,53 @@ body {
   padding: 43px 0;
 }
 
+/******************************* 스티키 확인필요 *******************************/
 /* 메뉴박스 */
-.menu-box {
+/* #menu-box {
+  position: sticky;
+  top: 0;
+  background-color: #000;
+  z-index: 9999999;
+  상단영역과 동일한 트랜지션 적용!
+  transition: top 0.3s ease-in-out;
+} */
+
+#menu-box {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  font-size: 18px;
+  background-color: #0000007a;
+  transition: translate 0.3s ease;
+  z-index: 10;
+}
+
+#menu-box.hide {
+  /* transform: translateY(-100%); */
+  translate: 0 -100%;
+}
+
+/******************************* 스티키 확인필요 *******************************/
+
+#menu-box {
   padding-right: 10px;
 }
 
 /* 메뉴그룹 플렉스 */
 .menu-group {
   position: relative;
+  padding-right: 20px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   justify-content: space-evenly;
   height: 100%;
 }
+
 /* 상단영역 메뉴 공통 플렉스 */
 .menu-group ul {
   display: flex;
@@ -277,8 +310,8 @@ body {
 
 /* 바탕 빨간 천 배경 */
 .footer {
-  background: url("../img/팬텀관련/images/images/하단영역_04.png")
-    center/cover no-repeat;
+  background: url("../img/팬텀관련/images/images/하단영역_04.png") center/cover
+    no-repeat;
   color: #fff;
 }
 .footer-wrap {
