--- a/1차_웹프로젝트/03.구현소스/css/common.css
+++ b/1차_웹프로젝트/03.구현소스/css/common.css
@@ -120,9 +120,12 @@ body {
 /***************** 2. 상단영역 *****************/
 /* 상단영역 최상위 부모박스 */
 #top-area {
-  position: relative;
+  position: sticky;
+  top: 0;
   /* 상단영역이 항상위! */
   z-index: 9999;
+  overflow: hidden;
+  height: 200px;
 }
 
 .top-area {
@@ -132,12 +135,15 @@ body {
 /* 상단영역 플렉스 부모박스 */
 .top-area .cont-box {
   justify-content: space-between;
+  
 }
-/* 로고박스 */
+
+/* 로고박스 - 상단의 첫번째 자식 */
 .logo-box {
   width: 126px;
   text-align: center;
   padding: 43px 0;
+  margin-right: auto;
 }
 
 /******************************* 스티키 확인필요 *******************************/
@@ -151,11 +157,12 @@ body {
   transition: top 0.3s ease-in-out;
 } */
 
+/* 상단의 두번째 자식 */
 #menu-box {
-  position: fixed;
-  top: 0;
+  /* 로고의 width크기를 제외한 나머지 채우기 */
+  flex: 1;
   width: 100%;
-  height: 60px;
+  height: 122px;
   display: flex;
   align-items: center;
   justify-content: end;
