--- a/1차_웹프로젝트/03.구현소스/css/p-relationship.css
+++ b/1차_웹프로젝트/03.구현소스/css/p-relationship.css
@@ -151,18 +151,19 @@
   object-fit: contain;
   /* 이미지 전체 보이기 */
   max-height: 100%;
+  text-align: center;
 }
 /* 포스터 기본 상태 */
-.poster-box ul li {
+.poster-box img {
   display: none;
-  opacity: 0;
-  transition: opacity 0.6s ease-in-out;
+  /* opacity: 0;
+  transition: opacity 0.6s ease-in-out; */
 }
 
 /* 활성화된 포스터 (JS에서 .active 추가됨) */
-.poster-box ul li.active {
-  display: block;
-  opacity: 1;
+.poster-box img.active {
+  display: inline;
+  /* opacity: 1; */
 }
 
 /* 활성화된 히스토리 버튼 강조 */
