--- a/1차_웹프로젝트/03.구현소스/css/intropage.css
+++ b/1차_웹프로젝트/03.구현소스/css/intropage.css
@@ -1,6 +1,5 @@
 @charset "utf-8";
 
-
 /* 외부 CSS 불러오기 */
 @import url(./common.css);
 @import url(./reset.css);
@@ -8,15 +7,23 @@
 /* 12그리드 CSS */
 @import url(./grid_12_flex.css);
 
+body {
+  overflow: hidden;
+}
+body.on{
+  animation: final-ani 2s ease-in-out 10s forwards;
+}
+
 /* 동영상 */
-.intro-box{
-    position: relative;
+.intro-box {
+  position: relative;
 }
 
 .intro-area {
   overflow: hidden;
 }
 .intro-box {
+  position: relative;
   height: 100vh;
 }
 .intro-box video {
@@ -24,6 +31,76 @@
   height: 100%;
   object-fit: cover;
   object-position: center;
+}
+/* 영상커버박스 */
+.cover-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  mix-blend-mode: darken;
+}
+/* 스포트라이트 원 */
+.cover-box .circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0%;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background-color: #fff;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 0 50px 10px #fff;
+}
+
+body.on .circle {  
+  width: 20%;
+  animation: 
+  spotlight-ani 5s ease-in-out 3s 2;
+}
+
+
+/* 스포트라이트  애니 */
+@keyframes spotlight-ani {
+  0% {
+    top: 50%;
+    left: 50%;
+  width: 20%;
+  }
+  10% {
+    top: 70%;
+    left: 30%;
+  width: 30%;
+  }
+  40% {
+    top: 80%;
+    left: 70%;
+  width: 25%;
+  }
+  55% {
+    top: 40%;
+    left: 60%;
+  width: 40%;
+  }
+  90% {
+    top: 60%;
+    left: 20%;
+  width: 50%;
+  }
+  100% {
+    top: 50%;
+    left: 50%;
+  width: 20%;
+  }
+}
+
+/* 최종암전 애니 */
+@keyframes final-ani {
+  100% {
+    filter: brightness(0);
+  }
 }
 
 #intro-area {
@@ -42,40 +119,64 @@
 }
 
 /* 커튼 이미지 */
-.curtain-box img{
-    position: absolute;
-    top: 0;
-    height: 100%;    
+.curtain-box img {
+  position: absolute;
+  top: 0;
+  height: 100%;
+}
+.curtain-box li:last-child img {
+  width: 33%;
+  height: auto;
+  left: 50%;
+  translate: -50%;
 }
 /* 질문 : 위쪽 커튼은 별도로 사이즈 줘야함 */
 
 /* 중앙 커튼 위치 */
 
 /* 사이드 커튼 사이드에 위치 */
-.left-s{
-    left: 0;
+.left-s {
+  left: 0;
 }
-.right-s{
-    right: 0;
+.right-s {
+  right: 0;
 }
 
-.left-c{
-    /* 이미지 가로 중앙에 위치 */
-    left: 50%;
-    transform: translateX(-50%);
+.left-c {
+  /* 이미지 가로 중앙에 위치 */
+  right: 50%;
+  width: 55%;
+  transition: 2s 0.4s;
 }
-.top{
-    /* 이미지 가로 중앙에 위치 */
-    top: 0;
-    /* 이미지 본인 사이즈 */
-    width: 100%;
-    
+body.on .left-c {
+  right: 100%;
+}
+
+.right-c {
+  /* 이미지 가로 중앙에 위치 */
+  left: 50%;
+  width: 55%;
+  transition: 2s 0.4s;
+}
+body.on .right-c {
+  left: 100%;
+}
+
+.top {
+  /* 이미지 가로 중앙에 위치 */
+  top: 0;
+  /* 이미지 본인 사이즈 */
+  width: 100%;
 }
 
 /* 중앙 로고 이미지 위치 */
-.logo{
-    position: absolute;
-    top: 0;
-    right: 50%;
-    transform: translateX(50%);
+.logo {
+  position: absolute;
+  top: 0;
+  right: 50%;
+  transform: translateX(50%);
+  transition: 2s;
+}
+body.on .logo {
+  top: -100%;
 }
