--- a/1차_웹프로젝트/03.구현소스/css/intropage.css
+++ b/1차_웹프로젝트/03.구현소스/css/intropage.css
@@ -10,8 +10,8 @@
 body {
   overflow: hidden;
 }
-body.on{
-  animation: final-ani 2s ease-in-out 10s forwards;
+body.on {
+  animation: final-ani 2s ease-in-out 5s forwards;
 }
 
 /* 동영상 */
@@ -52,47 +52,57 @@ body.on{
   border-radius: 50%;
   background-color: #fff;
   transform: translate(-50%, -50%);
-  box-shadow: 0 0 50px 10px #fff;
+  box-shadow: 0 0 50px 10px #ebff7b;
 }
 
-body.on .circle {  
-  width: 20%;
-  animation: 
-  spotlight-ani 5s ease-in-out 3s 2;
+body.on .circle {
+  width: 0%;
+  animation: spotlight-ani 5s ease-in-out 1s 1;
 }
-
 
 /* 스포트라이트  애니 */
 @keyframes spotlight-ani {
   0% {
     top: 50%;
     left: 50%;
-  width: 20%;
+    width: 0%;
+    box-shadow: 0 0 50px 10px #ebff7b;
   }
   10% {
+    top: 50%;
+    left: 50%;
+    width: 20%;
+    box-shadow: 0 0 50px 10px #ebff7b;
+  }
+  25% {
     top: 70%;
     left: 30%;
-  width: 30%;
+    width: 30%;
+    box-shadow: 0 0 50px 10px #ebff7b;
   }
   40% {
     top: 80%;
     left: 70%;
-  width: 25%;
+    width: 25%;
+    box-shadow: 0 0 50px 10px #ebff7b;
   }
   55% {
     top: 40%;
     left: 60%;
-  width: 40%;
+    width: 40%;
+    box-shadow: 0 0 50px 10px #ebff7b;
   }
   90% {
     top: 60%;
     left: 20%;
-  width: 50%;
+    width: 50%;
+    box-shadow: 0 0 50px 10px #ebff7b;
   }
   100% {
     top: 50%;
     left: 50%;
-  width: 20%;
+    width: 20%;
+    box-shadow: 0 0 50px 10px #ebff7b;
   }
 }
 
@@ -130,18 +140,8 @@ body.on .circle {
   left: 50%;
   translate: -50%;
 }
-/* 질문 : 위쪽 커튼은 별도로 사이즈 줘야함 */
 
 /* 중앙 커튼 위치 */
-
-/* 사이드 커튼 사이드에 위치 */
-.left-s {
-  left: 0;
-}
-.right-s {
-  right: 0;
-}
-
 .left-c {
   /* 이미지 가로 중앙에 위치 */
   right: 50%;
@@ -162,11 +162,34 @@ body.on .right-c {
   left: 100%;
 }
 
+/* 사이드 커튼 사이드에 위치 */
+.left-s {
+  left: 0;
+}
+.right-s {
+  right: 0;
+}
+
 .top {
   /* 이미지 가로 중앙에 위치 */
   top: 0;
   /* 이미지 본인 사이즈 */
   width: 100%;
+}
+
+/* 클릭버튼 */
+.curtain-box p{
+  position: absolute;
+  top: 46%;
+  left: 50.5%;
+  transform: translate(-50%, -50%);
+  font-family: "Alfa Slab One";
+  font-size: 2rem;
+  text-align: center;
+  font-weight: 500;
+  color: #fff;
+  transition: 2s 0.4s;
+  z-index: 99999999;
 }
 
 /* 중앙 로고 이미지 위치 */
